--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license-file = "LICENSE"
 [dependencies]
 clap = "4.5.51"
 serde_json = "1.0"
+indexmap = { version = "2.12.0", features = ["serde"] }
 
 [profile.release]
 codegen-units = 1
